# coreproject-opengraph

./: pyproject.toml
opengraph/: generate_svg.py
opengraph/builder/: description.py  secondary_title.py  title.py
opengraph/gradient/: secondary_title.py  title.py
opengraph/helpers/: __init__.py  image_to_base64.py  split_text.py
opengraph/maps/: __init__.py  id.py
opengraph/states/: gradients.py
